==> thetastate1/MobiusMQTT/MobiusDevice.cpp <==
#include "MobiusDevice.h"
#include "MobiusCRC.h"
#include "DefaultDeviceEventListener.h"
#include <mutex>
#include <esp32-hal-log.h>
#define LOG_TAG ""
#include <esp_log.h>
#define lowByte(w) ((uint8_t) ((w) & 0xff))
#define highByte(w) ((uint8_t) ((w) >> 8))

uint8_t MobiusDevice::scanForMobiusDevices(uint32_t scanDuration, MobiusDevice* deviceBuffer, uint8_t expectedCount) {
    MobiusDevice::_listener->onEvent(MobiusDeviceEvent::scanning_begin);
    // reset the scanning counts
    MobiusDevice::MobiusDeviceScanCallbacks::_expectedDevices = expectedCount;
    MobiusDevice::MobiusDeviceScanCallbacks::_foundDevices = 0;
    uint8_t count = 0;
    ESP_LOGI(LOG_TAG, "- Scanning for BLE devices");
    // get the singleton BLEScan object
    BLEScan* scanner = BLEDevice::getScan();
    BLEScanResults results = scanner->start(scanDuration, false);
    int deviceCount = results.getCount();
    for (int i = 0; i < deviceCount; i++) {
        BLEAdvertisedDevice advertisedDevice = results.getDevice(i);
        if (advertisedDevice.haveServiceUUID() && advertisedDevice.isAdvertisingService(Mobius::GENERAL_SERVICE)) {
            deviceBuffer[count++] = MobiusDevice(new BLEAdvertisedDevice(advertisedDevice));
            ESP_LOGD(LOG_TAG, "- Updated deviceBuffer with: %s", advertisedDevice.toString().c_str());
        }
    }
    // delete any results fromBLEScan buffer to release memory
    scanner->clearResults();
    MobiusDevice::_listener->onEvent(MobiusDeviceEvent::scanning_end);
    ESP_LOGD(LOG_TAG, "- Expecting to find %d devices; found %d", expectedCount, count);
    return count;
}

bool MobiusDevice::connect() {
    // rest the message count/ID
    // starting with 2, because why not?
    _messageId = 2;
    MobiusDevice::_listener->onEvent(MobiusDeviceEvent::connection_begin);
    BLEClient* client  = BLEDevice::createClient();
    //markw
    //std::string addressString = _device->getAddress().toString();
    //ESP_LOGD(LOG_TAG, "- Connecting to %s", addressString.c_str());
    client->connect(_device);
    
    BLERemoteService* remoteService = client->getService(Mobius::GENERAL_SERVICE);
    
    if (nullptr == remoteService) {
        ESP_LOGW(LOG_TAG, "- Failed to find service on %s", addressString.c_str());
        client->disconnect();
        NimBLEDevice::deleteClient(client);
        MobiusDevice::_listener->onEvent(MobiusDeviceEvent::connection_failure);
    } else {
        // connected to the device with general service
        if (connectToCharacteristics(remoteService)) {
            _client = client;
            _service = remoteService;
            ESP_LOGD(LOG_TAG, "- Connected successfully to %s", addressString.c_str());
            MobiusDevice::_listener->onEvent(MobiusDeviceEvent::connection_successful);
            //Adding the BLE device Information
            BLERemoteService* remoteServiceDevInfo = client->getService(Mobius::DEVICE_INFO);
            Serial.println("Got Device Info...");
            if (remoteServiceDevInfo != nullptr) {
              _devInfo = remoteServiceDevInfo;
               ESP_LOGD(LOG_TAG, "- Collected Device Info successfully to %s", addressString.c_str());
            }
        } else {
            ESP_LOGW(LOG_TAG, "- Failed to connect to characteristics");
            MobiusDevice::_listener->onEvent(MobiusDeviceEvent::connection_failure);
            NimBLEDevice::deleteClient(client);
        }
    }
    return (nullptr != _client);
}

void MobiusDevice::disconnect() {
    if (_client) {
        ESP_LOGD(LOG_TAG, "- Disconnecting from client");
        _client->disconnect();
        NimBLEDevice::deleteClient(_client);
        // destroying a client destroys the services
        // and destroying a service destroys the characteristics
        _client = nullptr;
        _service = nullptr;
        _devInfo = nullptr;
        _requestCharacteristic = nullptr;
        _responseCharacteristic1 = nullptr;
        _responseCharacteristic2 = nullptr;
    }
}

bool MobiusDevice::connectToCharacteristics(BLERemoteService* service) {
    // setup the request characteristic
    _requestCharacteristic = service->getCharacteristic(Mobius::REQUEST_CHARACTERISTIC);
    bool hasRequestChar = _requestCharacteristic && _requestCharacteristic->canWriteNoResponse();
    ESP_LOGD(LOG_TAG, "- hasRequestChar:%s", (hasRequestChar ? "true" : "false"));
    // setup the first response characteristic (the one which is used)
    _responseCharacteristic1 = service->getCharacteristic(Mobius::RESPONSE_CHARACTERISTIC_1);
    bool hasResponseChar1 = _responseCharacteristic1 && _responseCharacteristic1->canNotify();
    ESP_LOGD(LOG_TAG, "- hasResponseChar1:%s", (hasResponseChar1 ? "true" : "false"));
    if (hasResponseChar1) {
        // setup the notify callback so full responses can be read
        _responseCharacteristic1->registerForNotify(notifyCallback);
        //addressing issue in BLERemoteCharacteristic (missing response true)
        // similar to https://github.com/nkolban/esp32-snippets/issues/397
        uint8_t notificationOn[]={0x01, 0x00};
        _responseCharacteristic1->getDescriptor(BLEUUID((uint16_t)0x2902))->writeValue(notificationOn, 2, true);
    }
    // setup the second response characteristic
    _responseCharacteristic2 = service->getCharacteristic(Mobius::RESPONSE_CHARACTERISTIC_2);
    bool hasResponseChar2 = _responseCharacteristic2 && _responseCharacteristic2->canNotify();
    ESP_LOGD(LOG_TAG, "- hasResponseChar2:%s", (hasResponseChar2 ? "true" : "false"));
    if (hasResponseChar2) {
        // setup the notify callback so full responses can be read
        _responseCharacteristic2->registerForNotify(notifyCallback);
        //addressing issue in BLERemoteCharacteristic (missing response true)
        // similar to https://github.com/nkolban/esp32-snippets/issues/397
        uint8_t notificationOn[]={0x01, 0x00};
        _responseCharacteristic2->getDescriptor(BLEUUID((uint16_t)0x2902))->writeValue(notificationOn, 2, true);
    }
    
    return hasRequestChar && hasResponseChar1 && hasResponseChar2;
}

uint8_t* MobiusDevice::buildRequest(uint8_t* data, uint16_t length, uint8_t opCode, uint16_t reserved, uint16_t& requestSize) {
    requestSize = length + 11;
    uint8_t* request = new uint8_t[requestSize];

    // first byte is always 02
    request[0] = 0x02;
    // opGroup
    request[1] = Mobius::OP_GROUP_REQUEST;  // C2CI_Request
    // opCode
    request[2] = opCode;
    // mMessageId
    request[3] = lowByte(_messageId); // little endian
    request[4] = highByte(_messageId);// little endian
    _messageId++;
    // mReserved
    request[5] = highByte(reserved);
    request[6] = lowByte(reserved);
    // data size
    request[7] = lowByte(length); // little endian
    request[8] = highByte(length);// little endian
    // data
    for (uint16_t i = 0; i < length; i++) {
        request[9 + i] = data[i];
    }

    short crc = MobiusCRC::crc16(&request[1], requestSize - 3);
    request[requestSize - 2] = (uint8_t)crc;// lowByte(length)
    request[requestSize - 1] = (uint8_t)(crc >> 8); // highByte(length)

    ESP_LOGW(LOG_TAG, "- built request is:");
    ESP_LOG_BUFFER_HEXDUMP(LOG_TAG, request, requestSize, ESP_LOG_DEBUG);
    return request;
}

uint8_t* MobiusDevice::sendRequest(uint8_t* request, uint16_t length, uint16_t& responseSize) {
    ESP_LOGD(LOG_TAG, "- data being sent:");
    ESP_LOG_BUFFER_HEXDUMP(LOG_TAG, request, length, ESP_LOG_DEBUG);
    // setup response info
    responseSize = 0;
    uint8_t* response = new uint8_t[0];
    // get a copy of the request to write
    uint8_t toSend[length];
    memcpy(toSend, request, length);
    
    // reset the unread flag to avoid reading old data
    _responseDataMutex.lock();
    MobiusDevice::_responseUnread = false;
    _responseDataMutex.unlock();
    
    // do the actual writing to the characteristic
    if (_requestCharacteristic->writeValue(toSend, length)) {
        ESP_LOGD(LOG_TAG, "- data sent successfully");
        MobiusDevice::_listener->onEvent(MobiusDeviceEvent::request_successful);
        // look for a response
        bool received = false;
        ESP_LOGD(LOG_TAG, "- waiting for response");
        // wait for at most 1 second, with 100 ms read/check delay
        uint32_t oneSecond = 1000000;
        uint32_t readDelay =  100000;
        int64_t startMicro = esp_timer_get_time();
        while (!received && oneSecond > (esp_timer_get_time() - startMicro)) {
            // busy wait to avoid flooding with read requests and constant locking
            int64_t delayStartMicro = esp_timer_get_time();
            while(readDelay > (esp_timer_get_time() - delayStartMicro)) {}
            
            _responseDataMutex.lock();
            if (MobiusDevice::_responseUnread) {
                received = true;
                delete[] response;
                // new data to read
                responseSize = _responseDataSize;
                response = new uint8_t[responseSize];
                memcpy(response, _responseData, responseSize);
                // update as read
                MobiusDevice::_responseUnread = false;
                
                ESP_LOGD(LOG_TAG, "- response data was received:");
                ESP_LOG_BUFFER_HEXDUMP(LOG_TAG, response, responseSize, ESP_LOG_DEBUG);
            }
            _responseDataMutex.unlock();
        }
    } else {
        ESP_LOGW(LOG_TAG, "- Failed to send the request");
        MobiusDevice::_listener->onEvent(MobiusDeviceEvent::request_failure);
    }
    return response;
}

uint8_t* MobiusDevice::parseResponseData(uint8_t* response, uint16_t length, uint16_t& dataSize) {
    // setup default data info
    dataSize = 0;
    uint8_t* data = new uint8_t[0];
    // check response info
    bool isValid = (length > 11);
    isValid = isValid && (0x02 == response[0]);
    isValid = isValid && (Mobius::OP_GROUP_CONFIRM == response[1]);
    if (isValid) {
        // get the data 
        dataSize = (response[8] << 8) + (response[7]);
        // cleanup data and copy the data to be returned
        delete[] data;
        data = new uint8_t[dataSize];
        memcpy(data, &response[9], dataSize);
        ESP_LOGD(LOG_TAG, "- response data was valid and parsed into:");
        ESP_LOG_BUFFER_HEXDUMP(LOG_TAG, data, dataSize, ESP_LOG_DEBUG);
    } else {
        ESP_LOGW(LOG_TAG, "- response data was invalid");
    }
    return data;
}

bool MobiusDevice::responseSuccessful(uint8_t* request, uint16_t reqSize, uint8_t* response, uint16_t resSize) {
    bool idValid = false;
    bool dataSuccess = false;
    bool lengthsValid = (reqSize > 11) && (resSize > 11);
    if (lengthsValid) {
        // check first 5 bytes (which should match)
        idValid = (request[0] == response[0]);
        idValid = idValid && (response[1] == Mobius::OP_GROUP_CONFIRM); // C2CI_Confirm
        idValid = idValid && (request[2] == response[2]);
        idValid = idValid && (request[3] == response[3]);
        idValid = idValid && (request[4] == response[4]);
        // check the data
        int dataSize = (response[8] << 8) + (response[7]);
        uint8_t resData[dataSize];
        dataSuccess = (3 == dataSize);
        dataSuccess = dataSuccess && (0x00 == response[9]); // all response data starts with 0x00
        for (int i = 0; dataSuccess && i < dataSize - 1; i++) {
            resData[i] = response[10 + i];
            dataSuccess = dataSuccess && response[10 + i] == Mobius::RESPONSE_DATA_SUCCESSFUL[i];
        }
    }
    // check CRC of the response
    // skipping CRC validation for now because it seems to be different
    // Mobius app doesn't seem to be checking either
    //  short crc = crc16(&response[1], resSize-3);
    //  bool crcValid = (response[resSize-2] == (byte) crc) && (response[resSize-1] = (byte) (crc >> 8));
    ESP_LOGD(LOG_TAG, "- lengthsValid: %s", (lengthsValid ? "true" : "false"));
    ESP_LOGD(LOG_TAG, "- idValid: %s", (idValid ? "true" : "false"));
    ESP_LOGD(LOG_TAG, "- idValiddataSuccess: %s", (dataSuccess ? "true" : "false"));
    // skipping the CRC validation for now
    bool responseSuccessful = lengthsValid && idValid /*&& crcValid*/ && dataSuccess;
    if (responseSuccessful) {
        MobiusDevice::_listener->onEvent(MobiusDeviceEvent::response_successful);
    } else {
        MobiusDevice::_listener->onEvent(MobiusDeviceEvent::response_failure);
    }
    return responseSuccessful;
}
