==> treesta1ker/arduino-MobiusBLE/src/MobiusDevice.cpp <==
#include "MobiusDevice.h"
#include "MobiusCRC.h"

uint8_t MobiusDevice::scanForMobiusDevices(String addressBuffer[]) {
    uint8_t count = 0;
    Serial.print("Scanning for BLE devices");
    if (BLE.begin() && BLE.scanForName("MOBIUS", true)) {
        BLEDevice device;
        uint16_t purple[] = { redLed, blueLed };
        for (uint8_t i = 0; !count && i < 3; i++) {
            blinkLEDs(2, purple);
            Serial.print('.');
            device = BLE.available();
            while (device) {
                // add the new address
                addressBuffer[count++] = device.address();
                if (debug) {
                    Serial.print(" Found ");
                    Serial.print(device.address());
                    Serial.print('\t');
                }
                blinkLEDs(1, purple);
                // check for next device?
                device = BLE.available();
            }
        }
        Serial.println();
        
        if (debug) {
            Serial.print("Device count:");
            Serial.println(count);
        }
    } else {
        Serial.println(" - Failed to start scan");
    }
    BLE.stopScan();
    return count;
}

bool MobiusDevice::connect() {
    // rest the message count/ID
    // starting with 2, because why not?
    _messageId = 2;
    return connectTo(_address);
}

bool MobiusDevice::disconnect() {
    bool disconnected = true;
    if (_device) {
        disconnected = _device.disconnect();
        // reset current BLE objects
        _device = BLEDevice();
        _requestChar = BLECharacteristic();
        _responseChar = BLECharacteristic();
    }
    BLE.disconnect();
    return disconnected;
}

bool MobiusDevice::connectToCharacteristics(BLEDevice& peripheral) {
    if (debug) {
        Serial.print("connectToCharacteristics() -> peripheral:");
        Serial.println(peripheral.address());
    };
    // assuming peripheral is connected
    // get the "request" characteristic
    _requestChar = peripheral.characteristic(Mobius::REQUEST_CHARACTERISTIC);
    bool hasRequestChar = _requestChar && _requestChar.canWrite();
    // get the "response" characteristics
    BLECharacteristic responseChar1 = peripheral.characteristic(Mobius::RESPONSE_CHARACTERISTIC_1);
    bool hasResponseChar1 = responseChar1 && responseChar1.canSubscribe() && responseChar1.subscribe();
    _responseChar = peripheral.characteristic(Mobius::RESPONSE_CHARACTERISTIC_2);
    bool hasResponseChar2 = _responseChar && _responseChar.canSubscribe() && _responseChar.subscribe();

    if (!hasRequestChar || !hasResponseChar1 || !hasResponseChar2) {
        uint16_t yellow[] = { redLed, greenLed };  //yellow
        blinkLEDs(6, yellow); // ~ 3 seconds
        // reset characteristics to unconnected objects
        _requestChar = BLECharacteristic();
        _responseChar = BLECharacteristic();
    }
    if (debug) {
        Serial.print("connectToCharacteristics() -> ");
        Serial.print("hasRequestChar:");
        Serial.print(hasRequestChar);
        Serial.print(" hasResponseChar1:");
        Serial.print(hasResponseChar1);
        Serial.print(" hasResponseChar2:");
        Serial.println(hasResponseChar1);
    }
    return hasRequestChar && hasResponseChar1 && hasResponseChar2;
}

uint8_t* MobiusDevice::buildRequest(uint8_t* data, uint16_t length, uint8_t opCode, uint16_t reserved, uint16_t& requestSize) {
    requestSize = length + 11;
    uint8_t* request = new uint8_t[requestSize];

    // first byte is always 02
    request[0] = 0x02;
    // opGroup
    request[1] = Mobius::OP_GROUP_REQUEST;  // C2CI_Request
    // opCode
    request[2] = opCode;
    // mMessageId
    request[3] = lowByte(_messageId); // little endian
    request[4] = highByte(_messageId);// little endian
    _messageId++;
    // mReserved
    request[5] = highByte(reserved);
    request[6] = lowByte(reserved);
    // data size
    request[7] = lowByte(length); // little endian
    request[8] = highByte(length);// little endian
    // data
    for (uint16_t i = 0; i < length; i++) {
        request[9 + i] = data[i];
    }

    short crc = MobiusCRC::crc16(&request[1], requestSize - 3);
    request[requestSize - 2] = (uint8_t)crc;// lowByte(length)
    request[requestSize - 1] = (uint8_t)(crc >> 8); // highByet(length)

    if (debug) {
        Serial.print("buildRequest() -> request:");
        for (int i=0; i<requestSize; i++) {
            Serial.print(" 0x");
            Serial.print(request[i], HEX);
        }
        Serial.println();
    }

    return request;
}

uint8_t* MobiusDevice::sendRequest(uint8_t* request, uint16_t length, uint16_t& responseSize) {
    if (debug) {
        Serial.print("sendRequest() -> request:");
        for (int i=0; i<length; i++) {
            Serial.print(" 0x");
            Serial.print(request[i], HEX);
        }
        Serial.println();
    }
    // setup response info
    responseSize = 0;
    uint8_t* response = new uint8_t[0];
    // get a copy of the request to write
    uint8_t toSend[length];
    memcpy(toSend, request, length);
    // do the actual writing to the characteristic
    bool sent = _requestChar.writeValue(toSend, length);

    bool received = false;
    // look for a response (should only take one)
    Serial.print("Waiting for response ..");
    for (uint8_t i = 0; sent && !received && i < 5; i++) {
        Serial.print('.');
        uint16_t lightBlue[] = { blueLed, greenLed }; // light blue
        blinkLEDs(1, lightBlue);
        if (_responseChar.valueUpdated()) {
            uint8_t responseValue[255];
            responseSize = _responseChar.readValue(responseValue, sizeof responseValue);
            // cleanup response and copy the data to be returned
            delete[] response;
            response = new uint8_t[responseSize];
            memcpy(response, responseValue, responseSize);
            received = 0 < responseSize;
        }
    }
    Serial.println((received ? " Successful" : " Failed"));
    if (debug) {
        Serial.print("sendRequest() -> response:");
        for (int i=0; i<responseSize; i++) {
            Serial.print(" 0x");
            Serial.print(response[i], HEX);
        }
        Serial.println();
    }

    return response;
}

uint8_t* MobiusDevice::parseResponseData(uint8_t* response, uint16_t length, uint16_t& dataSize) {
    // setup default data info
    dataSize = 0;
    uint8_t* data = new uint8_t[0];
    // check response info
    bool isValid = (length > 11);
    isValid = isValid && (0x02 == response[0]);
    isValid = isValid && (Mobius::OP_GROUP_CONFIRM == response[1]);
    if (isValid) {
        // get the data 
        dataSize = (response[8] << 8) + (response[7]);
        // cleanup data and copy the data to be returned
        delete[] data;
        data = new uint8_t[dataSize];
        memcpy(data, &response[9], dataSize);
    }
    if (debug) {
        Serial.print("parseResponseData() -> data:");
        for (int i=0; i< dataSize; i++) {
            Serial.print(" 0x");
            Serial.print(data[i], HEX);
        }
        Serial.println();
    }

    return data;
}

bool MobiusDevice::responseSuccessful(uint8_t* request, uint16_t reqSize, uint8_t* response, uint16_t resSize) {
    bool idValid = false;
    bool dataSuccess = false;
    bool lengthsValid = (reqSize > 11) && (resSize > 11);
    if (lengthsValid) {
        // check first 5 bytes (which should match)
        idValid = (request[0] == response[0]);
        idValid = idValid && (response[1] == Mobius::OP_GROUP_CONFIRM); // C2CI_Confirm
        idValid = idValid && (request[2] == response[2]);
        idValid = idValid && (request[3] == response[3]);
        idValid = idValid && (request[4] == response[4]);
        // check the data
        int dataSize = (response[8] << 8) + (response[7]);
        uint8_t resData[dataSize];
        dataSuccess = (3 == dataSize);
        dataSuccess = dataSuccess && (0x00 == response[9]); // all response data starts with 0x00
        for (int i = 0; dataSuccess && i < dataSize - 1; i++) {
            resData[i] = response[10 + i];
            dataSuccess = dataSuccess && response[10 + i] == Mobius::RESPONSE_DATA_SUCCESSFUL[i];
        }
    }
    // check CRC of the response
    // skipping CRC validation for now because it seems to be different
    // Mobius app doesn't seem to be checking either
    //  short crc = crc16(&response[1], resSize-3);
    //  bool crcValid = (response[resSize-2] == (byte) crc) && (response[resSize-1] = (byte) (crc >> 8));
    if (debug) {
        Serial.print("responseSuccessful() -> lengthsValid:");
        Serial.print(lengthsValid);
        Serial.print(" idValid:");
        Serial.print(idValid);
        Serial.print(" dataSuccess:");
        Serial.println(dataSuccess);
    }
    // skipping the CRC validation for now
    return lengthsValid && idValid /*&& crcValid*/ && dataSuccess;
}
